--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "fs-promise": "^1.0.0",
+    "glob": "^7.1.1",
     "glob-promise": "^3.1.0",
     "neat-contract": "^1.1.0",
     "ramda": "^0.23.0"
